--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/papercss@1.9.2/dist/paper.min.css"
-    />
-    <title>Document</title>
-  </head>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <body>
-    <div class="paper container">
-       
-        <div class="row">
-      <div class="md-12 sm-12 col">
-        <h3 class="text-center">PEDRITO ESCAPA DEL ROPERO</h3>
-        <iframe src="PEDRITO/index.html" frameborder="0" width="100%" height="490"></iframe>
-      </div>
-    </div>
+  <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
+  <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/p5.sound.min.js"></script>
+  <script language="javascript" type="text/javascript" src="ESENARIO.js"></script>
+  <script language="javascript" type="text/javascript" src="OBSTACULOS.js"></script>
+  <script language="javascript" type="text/javascript" src="PERSONAJE.js"></script>
+  <script language="javascript" type="text/javascript" src="PRINCIPAL.js"></script>
+  <script language="javascript" type="text/javascript" src="PEDRITO.js"></script>
+  <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
-     </div>
-     
-  </body>
-  
+  <style>
+    canvas {
+      display: block;
+      margin: 0 auto;
+    }
+    body {
+      padding: 0;
+      margin: 0;
+      background-color: rgb(182, 70, 62);
+
+    }
+  </style>
+</head>
+
+<body>
+</body>
 </html>
